# automatic_music_transcription

./: .gitignore  Dockerfile  README.md  README_en.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
config/: __init__.py  load.py
playground/feature/generate_music/: draft1.ipynb  draft2.ipynb  draft3.ipynb  draft4.py  draft5.py  draft6.py  draft7.py  draft8.py  playground.ipynb  sample.ipynb
playground/feature/separate_instruments/: debug.py  playground.ipynb
src/: _utils.py  launch.py  utils.py
src/core/: __init__.py  depth_logging.py  files.py  global_settings.py  logger.py  requests_utils.py  timer.py  utils.py
