[tool.poetry]
name = "base-project"
version = "0.1.1"
description = "Base project"
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "--show-capture=no"